# Financial-Researcher-Agent

./: .env  README.md  pyproject.toml
frontend/: ap.py
frontend/output/: report.md
frontend/templates/: index.html
output/: report.md
src/financialresearcher/: crew.py  main.py
src/financialresearcher/config/: agents.yaml  tasks.yaml
src/financialresearcher/output/: report.md
